fixed up spacing for sections a little

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,12 @@ article {
 
 section {
     width: 80%;
+    margin-bottom: 200px;
+}
+
+#root hr {
+    width: 55%;
+    margin-bottom: 80px;
 }
 
 
